fixed a shared account bug on web
it hopefully works if it doesnt im cooked

--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/GameWebGL9.53.loader.js";
+      var loaderUrl = buildUrl + "/its like game 9.54 i think.loader.js";
       var config = {
-        dataUrl: buildUrl + "/GameWebGL9.53.data.unityweb",
-        frameworkUrl: buildUrl + "/GameWebGL9.53.framework.js.unityweb",
-        codeUrl: buildUrl + "/GameWebGL9.53.wasm.unityweb",
+        dataUrl: buildUrl + "/its like game 9.54 i think.data.unityweb",
+        frameworkUrl: buildUrl + "/its like game 9.54 i think.framework.js.unityweb",
+        codeUrl: buildUrl + "/its like game 9.54 i think.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Nebechanezzer",
         productName: "Roll",
